--- a/ui/locales/zh.json
+++ b/ui/locales/zh.json
@@ -33,13 +33,14 @@
     "authSaveSession": "保存会话",
     "authSaveSuccess": "账号 \"{accountName}\" 保存成功！",
     "authSend": "发送",
+    "authSendEnter": "发送回车键",
     "authSendText": "发送文本",
     "authSendTextPlaceholder": "输入要发送到远程会话的文本",
     "authSessionClosed": "VNC 会话已关闭。",
     "authSessionClosedNormally": "会话正常关闭。",
     "authSessionClosedReason": "原因：",
     "authSessionClosedUnexpected": "连接意外中断。",
-    "authSessionNoticeText": "此 VNC 会话是临时的，将在 10 分钟无活动或保存后自动关闭。",
+    "authSessionNoticeText": "此 VNC 会话是临时的，如果 10 分钟无活动或点击保存后将自动关闭。",
     "authSessionNoticeTitle": "会话提示",
     "authStartVncFailed": "启动 VNC 会话失败",
     "authStartVncFailedDetail": "此功能需要安装了 <code>Xvfb</code>、<code>x11vnc</code> 和 <code>websockify</code> 的 Linux 系统。",
